syntax = "proto3";

package com.hibob.anyim.netty.protobuf;

option java_multiple_files = true;
option java_package = "com.hibob.anyim.netty.protobuf";

message Msg {
  Header header = 1;
  Body body = 2;
  optional Extension extension = 99;
}

enum MsgType {
  HELLO = 0; //握手
  HEART_BEAT = 1; //心跳
  CHAT = 2; //单聊
  GROUP_CHAT = 3; //群聊
  READ = 4; // 已读
  DELIVERED = 5; //已发送 TODO 这个消息是服务器主动发给client的，看看怎么设计消息结构

  CLOSE_BY_READ_IDLE = 10; //超时关闭
  CLOSE_BY_ERROR_MAGIC = 11; //magic不对关闭

  DEFAULT = 99;
}

message Header {
  int32 magic = 1;
  int32 version = 2;
  MsgType msgType = 3;
  bool isExtension = 4;
}

message Body {
  string fromId = 1;
  string fromClient = 2;
  optional string toId = 3;
  optional string toClient = 4;
  optional string groupId = 5;
  optional int64 msgId = 6;
  int32 seq = 7;
  int32 ack = 8;
  string content = 9;
}

message Extension {
  map<string, string> extensionMap = 1;
}
